# DCTap

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: change-request.md
.github/workflows/: generate.yml  test.yml
Monograph DCTAP/: Monograph Level 1-2 - Version 3_2024-07-15 .xlsx - Instance-MonographElectronic.tsv  Monograph Level 1-2 - Version 3_2024-07-15 .xlsx - Instance-MonographPrint.tsv  Monograph Level 1-2 - Version 3_2024-07-15 .xlsx - Prefixes.tsv  Monograph Level 1-2 - Version 3_2024-07-15 .xlsx - Work-MonographText.tsv  Monograph_AdminMetadata.tsv  Monograph_Instance_Electronic.tsv  Monograph_Instance_Print.tsv  Monograph_Work_Text.tsv
Serials DCTAP/: Serial_Instance_Electronic.tsv  Serial_Instance_Print.tsv  Serial_Prefixes.tsv  Serial_Work_Text.tsv  Serials Level 1-2 - Version 4_2024-07-19 .xlsx - Instance-SerialElectronic.tsv  Serials Level 1-2 - Version 4_2024-07-19 .xlsx - Instance-SerialPrint.tsv  Serials Level 1-2 - Version 4_2024-07-19 .xlsx - Work-SerialText.tsv  Serials_Work_Text.tsv
src/: .generate_website.py.swp  generate_website.py
src/templates/: base.html  dctap.html  dctap_index.html  index.html
tests/: README.md  conftest.py  monograph_admin_metadata.csv  monograph_print_instances.csv  monograph_text_works.csv  serial_admin_metadata.csv  serial_instances.csv  serial_text_works.csv  test_monograph.py  test_serials.py
tests/loc/: get.sh
tests/loc/audio/: 22525609.cbd.rdf  22525653.cbd.rdf  22551886.cbd.rdf  22633944.cbd.rdf  23627975.cbd.rdf
tests/loc/cartography/: 24001828.cbd.rdf  5441168.cbd.rdf  5554294.cbd.rdf  (+1 more)
(+751 files in other folders)
